Image overlap bug fix

--- a/style.css
+++ b/style.css
@@ -428,7 +428,7 @@ h1.big-title
 
 .grid 
 {
-    width: 800px;
+    width: 760px;
     margin: 0 auto;
     overflow: hidden;
     position: relative;
